# django-party

./: pyproject.toml
core/: settings.py  urls.py
party/: forms.py  models.py  urls.py
party/migrations/: 0001_initial.py  0002_party_guest_gift.py
party/templates/party/: base.html
party/templates/party/party_detail/: page_party_detail.html  partial_party_detail.html  partial_party_edit_form.html
party/templates/party/party_list/: page_parties_list.html
party/tests/: conftest.py  test_new_party.py  test_party_detail.py  test_party_list.py
party/views/: __init__.py  new_party_views.py  party_details_views.py  party_list_views.py
theme/static_src/: tailwind.config.js
theme/static_src/src/: styles.css
